pkg/ibmvpc/examples/out/explain_out/VsiWithTwoSgsNeitherEnabling_all_vpcs_explain_detail.txt
Explaining connectivity from vsi3a-ky to vsi1-ky within test-vpc1-ky
Interpreted source: vsi3a-ky[10.240.30.5]
Interpreted destination: vsi1-ky[10.240.10.4]
====================================================================

No connections from vsi3a-ky[10.240.30.5] to vsi1-ky[10.240.10.4];
connection is blocked by ingress

Egress: security group sg3-ky allows connection; network ACL acl3-ky allows connection
Ingress: network ACL acl1-ky allows connection; security group sg1-ky blocks connection; security group sg3-ky blocks connection

Path:
	vsi3a-ky[10.240.30.5] -> security group sg3-ky -> network ACL acl3-ky -> subnet3-ky -> 
	subnet1-ky -> network ACL acl1-ky -> | security group[sg1-ky, sg3-ky] |


Details:
~~~~~~~~
Path is disabled; The relevant rules are:
	Egress:
		security group sg3-ky allows connection with the following allow rules
			index: 0, direction: outbound,  conns: protocol: all, remote: 0.0.0.0/0, local: 0.0.0.0/0
			index: 1, direction: outbound,  conns: protocol: tcp,  dstPorts: 1-65535, remote: 0.0.0.0/0, local: 0.0.0.0/0
			index: 2, direction: outbound,  conns: protocol: tcp,  dstPorts: 100-200, remote: 0.0.0.0/0, local: 0.0.0.0/0
		network ACL acl3-ky allows connection with the following allow rules
			index: 0, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

	Ingress:
		network ACL acl1-ky allows connection with the following allow rules
			index: 1, direction: inbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow
		security group sg1-ky has no relevant allow rules
		security group sg3-ky has no relevant allow rules

------------------------------------------------------------------------------------------------------------------------
